--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <header class='header'>
       <img class='trybewarts-header-logo' src="/images/trybewarts-header-logo.svg" alt="">
+      
+      <form class='trybewarts-login' action="">
+        <input type="text" name='email' placeholder="Email">
+        <input type="password" name='password' placeholder='Senha'>
+        <button onclick="checkLogin()">Entrar</button>
+      </form>
     </header>
+
+    
   </body>
+  <script src="script.js"></script>
 </html>
