--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
     <header class='header'>
       <img class='trybewarts-header-logo' src="/images/trybewarts-header-logo.svg" alt="">
+
+      <h1 id='trybewarts-header-title'>Trybewarts</h1>
       
       <form class='trybewarts-login' action="">
         <input type="text" name='email' placeholder="Email">
         <input type="password" name='password' placeholder='Senha'>
-        <button onclick="checkLogin()">Entrar</button>
+        <button class='button'>Entrar</button>
       </form>
     </header>
 
