--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   <body>
     <header class='header'>
-      <img class='trybewarts-header-logo' width='100px' src="/images/trybewarts-header-logo.svg" alt="">
+      <img class='trybewarts-header-logo' src="/images/trybewarts-header-logo.svg" alt="">
 
       <h1 id='trybewarts-header-title'>Trybewarts</h1>
       
@@ -19,6 +19,12 @@
         <button class='button'>Entrar</button>
       </form>
     </header>
+
+    <main>
+      <form id='evaluation-form' action="">
+
+      </form>
+    </main>
 
     
   </body>
