--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 
     <main>
       <form id='evaluation-form' action="">
-
+        <h1>Formulário de Avaliação</h1>
+        <input id='input-name' type="text" placeholder="Nome">
+        <input id='input-lastname' type="text" placeholder="Sobrenome">
+        <input id='input-email' type="text" placeholder="Email">
       </form>
+
+      <img id='trybewarts-forms-logo' src="/images/trybewarts-colored.svg" alt="">
     </main>
 
     
