--- a/index.html
+++ b/index.html
@@ -23,22 +23,27 @@
     <main>
       <form id='evaluation-form' action="">
         <h1>Formulário de Avaliação</h1>
-        <input id='input-name' type="text" placeholder="Nome">
-        <input id='input-lastname' type="text" placeholder="Sobrenome">
-        <input id='input-email' type="text" placeholder="Email">
 
-        <select id="house" name="">
-          <option id="gitnoria-house" value="Gitnória">Gitnória</option>
-          <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
-          <option id="corvinode-house" value="Corvinode">Corvinode</option>
-          <option id="pytherina-house" value="Pytherina">Pytherina</option>
-        </select>
+        <div class='left'>
+         <input id='input-name' type="text" placeholder="Nome">
+         <input id='input-lastname' type="text" placeholder="Sobrenome">
+        </div>
+
+        <div class='rigth'>
+          <input id='input-email' type="text" placeholder="Email">
+
+          <label for="house">Casa:</label>
+          <select id="house" name="house">
+            <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+            <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+            <option id="corvinode-house" value="Corvinode">Corvinode</option>
+            <option id="pytherina-house" value="Pytherina">Pytherina</option>
+          </select>
+        </div>
       </form>
 
       <img id='trybewarts-forms-logo' src="/images/trybewarts-colored.svg" alt="">
     </main>
-
-    
   </body>
   <script src="script.js"></script>
 </html>
