--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <option id="pytherina-house" value="Pytherina">Pytherina</option>
           </select>
         </div>
+
+        <label id='label-family' for="family">Qual sua família?</label>
+        <input type="radio" name='family' value='Frontend'>
+        <input type="radio" name='family' value='Backend'>
+        <input type="radio" name='family' value='FullStack'>
       </form>
 
       <img id='trybewarts-forms-logo' src="/images/trybewarts-colored.svg" alt="">
