--- a/index.html
+++ b/index.html
@@ -58,10 +58,27 @@
           <div><input type="checkbox" name="language" value="Promises">Promises</div>
           <div><input type="checkbox" name="language" value="React">React</div>
           <div><input type="checkbox" name="language" value="SQL">SQL</div>
-          <div><input type="checkbox" name="language" value="Python">Python</div> 
+          <div><input type="checkbox" name="language" value="Python">Python</div>
         </section>
 
         <hr>
+
+
+        <section>
+          <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
+
+          <input type="radio" name='rate' value='1'>
+          <input type="radio" name='rate' value='2'>
+          <input type="radio" name='rate' value='3'>
+          <input type="radio" name='rate' value='4'>
+          <input type="radio" name='rate' value='5'>
+          <input type="radio" name='rate' value='6'>
+          <input type="radio" name='rate' value='7'>
+          <input type="radio" name='rate' value='8'>
+          <input type="radio" name='rate' value='9'>
+          <input type="radio" name='rate' value='10'>
+        </section>
+
 
       </form>
 
