--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
           <input type="radio" name='rate' value='10'>
         </section>
 
+        <label class="textarea" for="">Deixe seu comentário:</label>
+        <textarea id="textarea" maxlength="500" for=""></textarea>
 
       </form>
 
