--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         <label class="textarea" for="">Deixe seu comentário:</label>
         <textarea id="textarea" maxlength="500" for=""></textarea>
 
+        <div> 
+          <label id="label-infos" for="teste">Você concorda com o uso das informações acima?</label>
+          <input id="agreement" type="checkbox" name='teste'>
+        </div>
+
+
       </form>
 
       <img id='trybewarts-forms-logo' src="/images/trybewarts-colored.svg" alt="">
