--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
 
         <div> 
           <label id="label-infos" for="teste">Você concorda com o uso das informações acima?</label>
-          <input id="agreement" type="checkbox" name='teste'>
+          <input id="agreement" type="checkbox" name='teste' required>
         </div>
 
+        <button id="submit-btn" type="submit" disabled>Enviar</button>
 
       </form>
 
