finaliza requisito 19, 100% dos obrigatorios concluidos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
         <hr>
 
-
         <section>
           <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
 
@@ -88,11 +87,12 @@
         </div>
 
         <button id="submit-btn" type="submit" disabled>Enviar</button>
-
       </form>
 
       <img id='trybewarts-forms-logo' src="/images/trybewarts-colored.svg" alt="">
     </main>
+
+     <footer>Direitos reservados à Trybewarts©</footer>
   </body>
   <script src="script.js"></script>
 </html>
