--- a/index.html
+++ b/index.html
@@ -44,44 +44,53 @@
 
         <hr>
 
-        <section class='families'>
-          <label id='label-family' for="family">Qual sua família?</label>
-          <div><input type="radio" name='family' value='Frontend'>Família Frontend</div>
-          <div><input type="radio" name='family' value='Backend'>Família Backend</div>
-          <div><input type="radio" name='family' value='FullStack'>Família FullStack</div>
-        </section>
+        <section class="container">
+          <div class='families'>
+            <label id='label-family' for="family">Qual sua família?</label>
+            <div><input type="radio" name='family' value='Frontend'> Família Frontend</div>
+            <div><input type="radio" name='family' value='Backend'> Família Backend</div>
+            <div><input type="radio" name='family' value='FullStack'> Família FullStack</div>
+          </div>
 
-        <section class='contents'>
-          <label id='label-content' for="language">Qual conteúdo você está com mais vontade de aprender?</label>
-          <div><input type="checkbox" name="language" value="HoFs">HoFs</div>
-          <div><input type="checkbox" name="language" value="Jest">Jest</div>
-          <div><input type="checkbox" name="language" value="Promises">Promises</div>
-          <div><input type="checkbox" name="language" value="React">React</div>
-          <div><input type="checkbox" name="language" value="SQL">SQL</div>
-          <div><input type="checkbox" name="language" value="Python">Python</div>
+          <div class='contents'>
+            <label id='label-content'>Qual conteúdo você está com mais vontade de aprender?</label>
+
+            <div class='up'>
+              <div class='language'><input type="checkbox" value="HoFs"> HoFs</div>
+              <div class='language'><input type="checkbox" value="Jest"> Jest</div>
+              <div class='language'><input type="checkbox" value="Promises"> Promises</div>
+            </div>
+            
+            <div class='down'>
+              <div class='language'><input type="checkbox" value="React"> React</div>
+              <div class='language'><input type="checkbox" value="SQL"> SQL</div>
+              <div class='language'><input type="checkbox" value="Python"> Python</div>
+            </div>
+            
+          </div>
         </section>
 
         <hr>
 
-        <section>
+        <section class='rate'>
           <label id="label-rate" for="rate">Como você avalia a Trybewarts?</label>
 
-          <input type="radio" name='rate' value='1'>
-          <input type="radio" name='rate' value='2'>
-          <input type="radio" name='rate' value='3'>
-          <input type="radio" name='rate' value='4'>
-          <input type="radio" name='rate' value='5'>
-          <input type="radio" name='rate' value='6'>
-          <input type="radio" name='rate' value='7'>
-          <input type="radio" name='rate' value='8'>
-          <input type="radio" name='rate' value='9'>
-          <input type="radio" name='rate' value='10'>
+          <input type="radio" name='rate' value='1'>1          
+          <input type="radio" name='rate' value='2'>2
+          <input type="radio" name='rate' value='3'>3
+          <input type="radio" name='rate' value='4'>4
+          <input type="radio" name='rate' value='5'>5
+          <input type="radio" name='rate' value='6'>6
+          <input type="radio" name='rate' value='7'>7
+          <input type="radio" name='rate' value='8'>8
+          <input type="radio" name='rate' value='9'>9
+          <input type="radio" name='rate' value='10'>10
         </section>
 
         <label class="textarea" for="">Deixe seu comentário:</label>
-        <textarea id="textarea" maxlength="500" for=""></textarea>
+        <textarea id="textarea" maxlength="500" rows="5" for=""></textarea>
 
-        <div> 
+        <div class='infos'> 
           <label id="label-infos" for="teste">Você concorda com o uso das informações acima?</label>
           <input id="agreement" type="checkbox" name='teste' required>
         </div>
